[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/dialogue.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/fonts/CompassPro.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=3]
size = 21
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 2 )

[node name="dialogue" type="CanvasLayer"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 384.0 ],
"_edit_vertical_guides_": [ 502.0 ]
}

[node name="NinePatchRect" type="ColorRect" parent="."]
anchor_right = 0.065
margin_left = 80.0
margin_top = 360.0
margin_right = 512.44
margin_bottom = 450.0
color = Color( 0, 0, 0, 0.25098 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="name" type="RichTextLabel" parent="NinePatchRect"]
anchor_right = 0.386774
margin_left = 14.0
margin_top = 6.0
margin_right = 118.0
margin_bottom = 27.0
custom_fonts/normal_font = SubResource( 3 )
text = "Name"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="message" type="RichTextLabel" parent="NinePatchRect"]
margin_left = 21.0
margin_top = 36.0
margin_right = 491.0
margin_bottom = 84.0
custom_fonts/normal_font = SubResource( 2 )
text = "Hey whats up"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="NinePatchRect"]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="tween_completed" from="NinePatchRect/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
